--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@ i.surfingbird::before{
 <body>
 
 <div class="btn-group">
-    <button class="btn btn-default disabled">Share:</button>
+    <!--<button class="btn btn-default disabled">Share:</button>
 
     <a class="btn btn-default" target="_blank" title="Like On Facebook" href="http://www.facebook.com/plugins/like.php?href=_URL_">
         <i class="fa fa-thumbs-o-up fa-lg fb"></i>
     </a>
 
     <a class="btn btn-default google-plus-one" target="_blank" title="+1 On Google" href="https://apis.google.com/_/+1/fastbutton?usegapi=1&size=large&hl=en&url=_URL_">
-        <i class="fa fa-google-plus fa-2x google"></i><span class="google">1</span>
+        <i class="fa fa-google-plus fa-2x google"></i><span class="google">1</span>-->
     </a>
 
     <a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php?u=_URL_&t=_DESCTEXT_">
@@ -69,24 +69,24 @@ i.surfingbird::before{
         <i class="fa fa-twitter fa-lg tw"></i>
     </a>
 
-    <a class="btn btn-default" target="_blank" title="On Google Plus" href="https://plusone.google.com/_/+1/confirm?hl=en&url=_URL_">
+    <!--<a class="btn btn-default" target="_blank" title="On Google Plus" href="https://plusone.google.com/_/+1/confirm?hl=en&url=_URL_">
         <i class="fa fa-google-plus fa-lg google"></i>
     </a>
 
     <a class="btn btn-default" target="_blank" title="On LinkedIn" href="http://www.linkedin.com/shareArticle?mini=true&url=_URL_">
-        <i class="fa fa-linkedin fa-lg linkin"></i>
+        <i class="fa fa-linkedin fa-lg linkin"></i>-->
     </a>
 
     <a class="btn btn-default" target="_blank" title="On VK.com"  href="http://vk.com/share.php?url=_URL_&title=_TITLE_&description=_DESCTEXT_&image=_URL_TO_MEDIA">
         <i class="fa fa-vk fa-lg vk"></i>
     </a>
 
-    <a class="btn btn-default" target="_blank" title="Pin It"  href="http://www.pinterest.com/pin/create/button/?url=_URL_&description=_DESCTEXT_&media=_URL_TO_MEDIA">
+    <!--<a class="btn btn-default" target="_blank" title="Pin It"  href="http://www.pinterest.com/pin/create/button/?url=_URL_&description=_DESCTEXT_&media=_URL_TO_MEDIA">
         <i class="fa fa-pinterest fa-lg pinterest"></i>
     </a>
 
     <a class="btn btn-default" target="_blank" title="Surf!"  href="http://surfingbird.ru/share?url=_URL_&description=_DESCTEXT_&screenshot=_URL_TO_MEDIA&title=_TITLE_">
-        <i class="fa surfingbird fa-lg"></i>
+        <i class="fa surfingbird fa-lg"></i>-->
     </a>
 </div>
 
