--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ i.surfingbird::before{
     </a>
 
     <a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php?u=_URL_&t=_DESCTEXT_">
-        <i class="fa fa-facebook fa-lg fb"></i>
+        <i class="fa fa-facebook fa-lg fb">facebook</i>
     </a>
 
     <a class="btn btn-default" target="_blank" title="On Twitter" href="http://twitter.com/share?url=_URL_&text=_DESCTEXT_">
-        <i class="fa fa-twitter fa-lg tw"></i>
+        <i class="fa fa-twitter fa-lg tw">twitter</i>
     </a>
 
     <!--<a class="btn btn-default" target="_blank" title="On Google Plus" href="https://plusone.google.com/_/+1/confirm?hl=en&url=_URL_">
@@ -78,7 +78,7 @@ i.surfingbird::before{
     </a>
 
     <a class="btn btn-default" target="_blank" title="On VK.com"  href="http://vk.com/share.php?url=_URL_&title=_TITLE_&description=_DESCTEXT_&image=_URL_TO_MEDIA">
-        <i class="fa fa-vk fa-lg vk"></i>
+        <i class="fa fa-vk fa-lg vk">вконтакте</i>
     </a>
 
     <!--<a class="btn btn-default" target="_blank" title="Pin It"  href="http://www.pinterest.com/pin/create/button/?url=_URL_&description=_DESCTEXT_&media=_URL_TO_MEDIA">
