--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <meta property="og:title" content="OG:TITLE">
+    <meta property="og:description" content="DESCRIPTION">
+    <meta property="og:type" content="TYPE">
+    <meta property="og:site_name" content="OG:SITE_NAME" />
+    <meta property="og:url" content="OG:URL">
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
