--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ i.surfingbird::before{
         <i class="fa fa-google-plus fa-2x google"></i><span class="google">1</span>-->
     </a>
 
-    <a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php?u=_URL_&t=_DESCTEXT_">
+    <a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php<!--?u=_URL_&t=_DESCTEXT_-->">
         <i class="fa fa-facebook fa-lg fb">facebook</i>
     </a>
 
-    <a class="btn btn-default" target="_blank" title="On Twitter" href="http://twitter.com/share?url=_URL_&text=_DESCTEXT_">
+    <a class="btn btn-default" target="_blank" title="On Twitter" href="http://twitter.com/share<!--?url=_URL_&text=_DESCTEXT_-->">
         <i class="fa fa-twitter fa-lg tw">twitter</i>
     </a>
 
@@ -82,7 +82,7 @@ i.surfingbird::before{
         <i class="fa fa-linkedin fa-lg linkin"></i>-->
     </a>
 
-    <a class="btn btn-default" target="_blank" title="On VK.com"  href="http://vk.com/share.php?url=_URL_&title=_TITLE_&description=_DESCTEXT_&image=_URL_TO_MEDIA">
+    <a class="btn btn-default" target="_blank" title="On VK.com"  href="http://vk.com/share.php<!--?url=_URL_&title=_TITLE_&description=_DESCTEXT_&image=_URL_TO_MEDIA-->">
         <i class="fa fa-vk fa-lg vk">вконтакте</i>
     </a>
 
