--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="DESCRIPTION">
     <meta property="og:type" content="TYPE">
     <meta property="og:site_name" content="OG:SITE_NAME" />
-    <meta property="og:url" content="OG:URL">
+    <meta property="og:url" content="https://0-22.github.io/test/">
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
