Поменял ссылку у facebook

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta property="og:title" content="OG:TITLE">
     <meta property="og:description" content="DESCRIPTION">
     <meta property="og:type" content="TYPE">
-    <meta property="og:site_name" content="OG:SITE_NAME" />
-    <meta property="og:url" content="https://0-22.github.io/test/">
+    <meta property="og:site_name" content="OG:SITE_NAME">
+    <meta property="og:url" content="https://0-22.github.io/test">
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
@@ -66,10 +66,13 @@ i.surfingbird::before{
         <i class="fa fa-google-plus fa-2x google"></i><span class="google">1</span>-->
     </a>
 
-    <a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php">
+    <!--<a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php">
         <i class="fa fa-facebook fa-lg fb">facebook</i>
         <!--?u=_URL_&t=_DESCTEXT_-->
-    </a>
+    <!--</a>-->
+    
+    <a href="#" onclick="this.href='http://www.facebook.com/share.php?u='+window.location.href+window.location.hash">Добавить в Facebook</a>
+    
 
     <a class="btn btn-default" target="_blank" title="On Twitter" href="http://twitter.com/share">
         <!--?url=_URL_&text=_DESCTEXT_-->
