--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ i.surfingbird::before{
 
   <!-- Your share button code -->
   <div class="fb-share-button" 
-    data-href="https://www.your-domain.com/your-page.html" 
+    data-href="https://0-22.github.io/test/" 
     data-layout="button_count">
   </div>
 
