Добавил текст в div

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ i.surfingbird::before{
   <!-- Your share button code -->
   <div class="fb-share-button" 
     data-href="https://0-22.github.io/test/" 
-    data-layout="button_count">
+    data-layout="button_count">Поделиться
   </div>
 
     <!--<button class="btn btn-default disabled">Share:</button>
