--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ i.surfingbird::before{
 
 <body>
 
-<div class="btn-group">
+<!--<div class="btn-group">-->
 
     <!-- Load Facebook SDK for JavaScript -->
-  <div id="fb-root"></div>
+  <div id="fb-root">fbroot</div>
   <script>(function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
@@ -69,7 +69,7 @@ i.surfingbird::before{
 
   <!-- Your share button code -->
   <div class="fb-share-button" 
-    data-href="https://0-22.github.io/test/" 
+    data-href="https://0-22.github.io/test" 
     data-layout="button_count">Поделиться
   </div>
 
@@ -102,7 +102,7 @@ i.surfingbird::before{
 
     <a class="btn btn-default" target="_blank" title="On LinkedIn" href="http://www.linkedin.com/shareArticle?mini=true&url=_URL_">
         <i class="fa fa-linkedin fa-lg linkin"></i>-->
-    </a>
+    <!--</a>-->
 
     <!--<a class="btn btn-default" target="_blank" title="On VK.com"  href="http://vk.com/share.php">
         <!--?url=_URL_&title=_TITLE_&description=_DESCTEXT_&image=_URL_TO_MEDIA-->
@@ -115,8 +115,8 @@ i.surfingbird::before{
 
     <a class="btn btn-default" target="_blank" title="Surf!"  href="http://surfingbird.ru/share?url=_URL_&description=_DESCTEXT_&screenshot=_URL_TO_MEDIA&title=_TITLE_">
         <i class="fa surfingbird fa-lg"></i>-->
-    </a>
-</div>
+    <!--</a>
+</div>-->
 
 </body>
 
