--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Test</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <meta property="og:title" content="OG:TITLE" />
     <meta property="og:description" content="DESCRIPTION" />
     <meta property="og:type" content="TYPE" />
     <meta property="og:site_name" content="OG:SITE_NAME" />
     <meta property="og:url" content="https://0-22.github.io/test" />
+    <meta property="og:image" content="favicon.ico" />
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
