--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="TYPE" />
     <meta property="og:site_name" content="OG:SITE_NAME" />
     <meta property="og:url" content="https://0-22.github.io/test" />
-    <meta property="og:image" content="favicon.ico" />
+    <meta property="og:image" content="clouds.jpg" />
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
