Новая кнопка без js

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ i.surfingbird::before{
 
 <body>
 
+<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fhttps://0-22.github.io/test/&amp;t=text%20moreText">На фейсбук</a>
+
 <!--<div class="btn-group">-->
 
     <!--<div id="fb-root"></div>
@@ -68,7 +70,7 @@ i.surfingbird::before{
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>-->
-    
+    <!-- //////////////////////////////////////////////////////////////////////////
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
@@ -78,7 +80,7 @@ i.surfingbird::before{
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-
+    ////////////////////////////////////////////////////////////////////////// -->
     <!-- Load Facebook SDK for JavaScript -->
     <!--<div id="fb-root">fbroot</div>
     <script>(function(d, s, id) {
@@ -92,11 +94,11 @@ i.surfingbird::before{
     <!--<div class="fb-share-button">
         <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u&amp;src=sdkpreparse">Поделиться</a>
     </div>-->
-    
+    <!--//////////////////////////////////
     <div class="fb-share-button">
         <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u&amp;src=sdkpreparse">Поделиться</a>
     </div>
-
+    ///////////////////////////////////// -->
   <!-- Your share button code -->
   <!--<div class="fb-share-button" 
     data-href="https://0-22.github.io/test" 
