Убрал в ссылке лишние слэши и двоеточия

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ i.surfingbird::before{
 
 <body>
 
-<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fhttps://0-22.github.io/test/&amp;t=text%20moreText">На фейсбук</a>
+<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/&amp;t=text%20moreText">На фейсбук</a>
 
 <!--<div class="btn-group">-->
 
