Поменял все метатэги

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <title>Test</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <meta property="og:title" content="OG:TITLE" />
-    <meta property="og:description" content="DESCRIPTION" />
-    <meta property="og:type" content="TYPE" />
-    <meta property="og:site_name" content="OG:SITE_NAME" />
+    <meta property="og:title" content="New OG:TITLE" />
+    <meta property="og:description" content="New DESCRIPTION" />
+    <meta property="og:type" content="New TYPE" />
+    <meta property="og:site_name" content="New OG:SITE_NAME" />
     <meta property="og:url" content="https://0-22.github.io/test" />
-    <meta property="og:image" content="https://0-22.github.io/test/clouds.jpg" />
+    <meta property="og:image" content="https://0-22.github.io/test/h2r.jpg" />
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
@@ -57,7 +57,7 @@ i.surfingbird::before{
 
 <body>
 
-<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/&amp;t=text%20moreText">На фейсбук</a>
+<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>
 
 <!--<div class="btn-group">-->
 
