Описание берётся из строки

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ i.surfingbird::before{
 
 <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>
 
-<a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>
+<a href="https://vk.com/share.php?url=https://0-22.github.io/test/;description=description_from_string" target="_blank">Поделиться ВКонтакте</a>
 
 <!--<div class="btn-group">-->
 
