--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ i.surfingbird::before{
 
 <a href="https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description" target="_blank">Поделиться ВКонтакте</a>
 
+<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>
+
 <!--<div class="btn-group">-->
 
     <!--<div id="fb-root"></div>
