Добавил twitter cards

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta property="og:site_name" content="New OG:SITE_NAME" />
     <meta property="og:url" content="https://0-22.github.io/test" />
     <meta property="og:image" content="https://0-22.github.io/test/h2r.jpg" />
+    
+    <meta name="twitter:card" content="CARD">
+    <meta name="twitter:site" content="https://0-22.github.io/test/">
+    <meta name="twitter:title" content="TITLE">
+    <meta name="twitter:description" content="DESCRIPTION">
+    <meta name="twitter:image" content="https://0-22.github.io/test/h2r.jpg">
+    
     <style>
     i.fb,       span.fb{     color: #3b5998; }
 i.tw,       span.tw{     color: #00aced; }
@@ -59,11 +66,13 @@ i.surfingbird::before{
 
 <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>
 
-<a href="https://vk.com/share.php?url=https://0-22.github.io/test&description=New_new_description" target="_blank">Поделиться ВКонтакте</a>
+<a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>
 <!--"https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description"-->
 
 
 <a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>
+
+<!--href="http://twitter.com/share?url=_URL_&text=_DESCTEXT_"-->
 
 <!--<div class="btn-group">-->
 
