Убрал параметры из ссылки на twitter

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@ i.surfingbird::before{
 <!--"https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description"-->
 
 
-<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>
+<a href="https://twitter.com/share">Twitter</a>
 
+
+<!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
 <!--href="http://twitter.com/share?url=_URL_&text=_DESCTEXT_"-->
 
 <!--<div class="btn-group">-->
