--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ i.surfingbird::before{
 <!--"https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description"-->
 
 
-<a href="https://twitter.com/share">Twitter</a>
+<!--<a href="https://twitter.com/share">Twitter</a>-->
 
 
 <!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
-<!--href="http://twitter.com/share?url=_URL_&text=_DESCTEXT_"-->
+<a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION">Twitter</a>
 
 <!--<div class="btn-group">-->
 
