--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ i.surfingbird::before{
 
 
 <!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
-<a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION%20#hashtag">Twitter</a>
+<a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION%20fuckhashtag">Twitter</a>
 
 <!--
 <a href="https://twitter.com/intent/tweet?button_hashtag=picture&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #picture</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
