--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@ i.surfingbird::before{
 <!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
 <a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION&button_hashtag=fuck">Twitter</a>
 
+<a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=_URL_">Одноклассники</a>
+
 <!--
+
 <a href="https://twitter.com/intent/tweet?button_hashtag=picture&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #picture</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 
 <!--<div class="btn-group">-->
