Убрал twitter cards

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:url" content="https://0-22.github.io/test" />
     <meta property="og:image" content="https://0-22.github.io/test/h2r.jpg" />
     
-    <meta name="twitter:card" content="CARD">
+    <!--<meta name="twitter:card" content="CARD">
     <meta name="twitter:site" content="https://0-22.github.io/test/">
     <meta name="twitter:title" content="TITLE">
     <meta name="twitter:description" content="DESCRIPTION">
-    <meta name="twitter:image" content="https://0-22.github.io/test/h2r.jpg">
+    <meta name="twitter:image" content="https://0-22.github.io/test/h2r.jpg">-->
     
     <style>
     i.fb,       span.fb{     color: #3b5998; }
