--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Описание статьи. Это очень интересная статья." />
     
     <meta property="og:title" content="New OG:TITLE" />
-    <meta property="og:description" content="New DESCRIPTION" />
+    <meta property="og:description" content="New_DESCRIPTION" />
     <meta property="og:type" content="New TYPE" />
     <meta property="og:site_name" content="New OG:SITE_NAME" />
     <meta property="og:url" content="https://0-22.github.io/test" />
@@ -69,8 +69,8 @@ i.surfingbird::before{
 
 <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>
 
+<!--<a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>-->
 <a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>
-<!--/////////<a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>-->
 <!--"https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description"-->
 
 
