--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ i.surfingbird::before{
 <!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
 <!--<a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION&button_hashtag=fuck">Twitter</a>-->
 
-<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="&lt;img src=&quot;https://0-22.github.io/test/clouds.jpg&quot;&gt;" data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="<img src='https://0-22.github.io/test/clouds.jpg'>"> data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 
