Переделал ссылку на фейсбук

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ i.surfingbird::before{
 
 <body>
     <div>
-        <a href="https://www.facebook.com/sharer.php">На фейсбук</a>
+        <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
         
     </div>
 
