Переделал ссылку на ВК

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ i.surfingbird::before{
 <body>
     <div>
         <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
+        <a href="https://vk.com/share.php">VK</a>
         
     </div>
 
