изменил data-text в твиттере

--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@ i.surfingbird::before{
     <div>
         <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
         <a href="https://vk.com/share.php?url=https://0-22.github.io/test/">VK</a>
+        <!--<a href="https://twitter.com/intent/tweet?button_hashtag=_HASHTAG_&ref_src=twsrc%5Etfw">Tweet #_HASHTAG_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
         
     </div>
 
+_TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg
 
 <!--<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>-->
 
 <!--<a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>-->
 <!--<a href="https://vk.com/share.php?url=https://0-22.github.io/test/" target="_blank">Поделиться ВКонтакте</a>-->
-<a href="https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description">VK</a>
+<!-- a href="https://vk.com/share.php?url=https://0-22.github.io/test/&description=New_new_description">VK</a> -->
 
 
 <!--<a href="https://twitter.com/share">Twitter</a>-->
@@ -86,7 +88,7 @@ i.surfingbird::before{
 <!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
 <!--<a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION&button_hashtag=fuck">Twitter</a>-->
 
-<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="<img src='https://0-22.github.io/test/clouds.jpg'>"> data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="https://0-22.github.io/test/clouds.jpg"> data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 
