--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@ _TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.
 <!--<a href="https://twitter.com/share?url=http%3A%2F%2F0-22.github.io/test/">Twitter</a>-->
 <!--<a href="http://twitter.com/share?url=https://0-22.github.io/test/&text=DESCRIPTION&button_hashtag=fuck">Twitter</a>-->
 
-<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="https://0-22.github.io/test/clouds.jpg"> data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!--//////////////////////////////////////<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="https://0-22.github.io/test/clouds.jpg"> data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 
+<a href="https://twitter.com/intent/tweet" data-text="https://0-22.github.io/test/clouds.jpg"> Tweet #_HASHTAG_</a>
 
 
 <a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
