Новая ссылка на Твиттер

--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@ i.surfingbird::before{
 
 <body>
     <div>
-        <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
         <a href="https://vk.com/share.php?url=https://0-22.github.io/test/">VK</a>
-        <!--<a href="https://twitter.com/intent/tweet?button_hashtag=_HASHTAG_&ref_src=twsrc%5Etfw">Tweet #_HASHTAG_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
+        <a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
+        <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
         
     </div>
 
 _TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg
+
+<a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-text="_TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg" data-show-count="false">TEXT IN LINK</a>
+
 
 <!--<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>-->
 
@@ -90,10 +93,10 @@ _TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.
 
 <!--//////////////////////////////////////<a href="https://twitter.com/intent/tweet?button_hashtag=ewfwf&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-text="https://0-22.github.io/test/clouds.jpg"> data-url="https://0-22.github.io/test/" data-show-count="false">Tweet #ewfwf</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 
-<a href="https://twitter.com/intent/tweet" data-text="https://0-22.github.io/test/clouds.jpg"> Tweet #_HASHTAG_</a>
+<!--<a href="https://twitter.com/intent/tweet" data-text="https://0-22.github.io/test/clouds.jpg"> Tweet #_HASHTAG_</a>
 
 
-<a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
+<a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>-->
 
 <!--
 
