--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@ i.surfingbird::before{
         
     </div>
 
+<a target="_blank" href="http://twitter.com/share?url=https://0-22.github.io/test/&text=_DESCTEXT_">
+
+
+<!--
 _TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg
 
-<a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-text="_TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg" data-show-count="false">TEXT IN LINK</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw" data-text="_TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg" data-show-count="false">TEXT IN LINK</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 
 
 <!--<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2F0-22.github.io/test/">На фейсбук</a>-->
