--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ i.surfingbird::before{
         
     </div>
 
-<a target="_blank" href="http://twitter.com/share?url=https://0-22.github.io/test/&text=_DESCTEXT_">
+<a target="_blank" href="http://twitter.com/share?url=https://0-22.github.io/test/&text=_DESCTEXT_">В Твиттер</a>
 
 
 <!--
