--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ i.surfingbird::before{
         <a href="https://vk.com/share.php?url=https://0-22.github.io/test/">VK</a>
         <a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
         <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
-        
+        <a target="_blank" href="http://twitter.com/share?url=https://0-22.github.io/test/&text=_DESCTEXT_%20_MORE_TEXT">В Твиттер</a>
     </div>
 
-<a target="_blank" href="http://twitter.com/share?url=https://0-22.github.io/test/&text=_DESCTEXT_">В Твиттер</a>
+
 
 
 <!--
