--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@ i.surfingbird::before{
 
 <body>
     <div>
-        <a href="https://vk.com/share.php?url=https://0-22.github.io/test/">VK</a>
-        <a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
-        <a href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
-        <a target="_blank" href="http://twitter.com/share?url=https://0-22.github.io/test/&text=_DESCTEXT_%20https://0-22.github.io/test/">В Твиттер</a>
+        <a target="_blank" href="https://vk.com/share.php?url=https://0-22.github.io/test/">VK</a>
+        <a target="_blank" href="https://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
+        <a target="_blank" href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
+        <a target="_blank" href="https://twitter.com/share?url=https://0-22.github.io/test/&text=xn-- , +, -yqiiacavcgvbdwjaj7cadcy1bkoeej8coqdobw3dbfoi1eieege9d7fqn2b">В Твиттер</a>
     </div>
 
 
-
+<a href="fuck.html">FUCK</a>
 
 <!--
 _TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.io/test/cloud.jpg
@@ -162,7 +162,7 @@ _TEXT_ #_HASHTAG1_ #_HASHTAG2_ https://0-22.github.io/test/ https://0-22.github.
 
     <a class="btn btn-default google-plus-one" target="_blank" title="+1 On Google" href="https://apis.google.com/_/+1/fastbutton?usegapi=1&size=large&hl=en&url=_URL_">
         <i class="fa fa-google-plus fa-2x google"></i><span class="google">1</span>-->
-    </a>
+    <!--</a>-->
 
     <!--<a class="btn btn-default" target="_blank" title="On Facebook" href="http://www.facebook.com/sharer.php">
         <i class="fa fa-facebook fa-lg fb">facebook</i>
