--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ i.surfingbird::before{
         <a target="_blank" href="https://vk.com/share.php?url=https://0-22.github.io/test/">VK</a>
         <a target="_blank" href="https://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=_COMMETS_&st._surl=https://0-22.github.io/test/">Одноклассники</a>
         <a target="_blank" href="https://www.facebook.com/sharer.php?u=https://0-22.github.io/test/">На фейсбук</a>
-        <a target="_blank" href="https://twitter.com/share?url=https://0-22.github.io/test/&text=xn-- , +, -yqiiacavcgvbdwjaj7cadcy1bkoeej8coqdobw3dbfoi1eieege9d7fqn2b">В Твиттер</a>
+        <a target="_blank" href="https://twitter.com/share?url=https://0-22.github.io/test/&text=На русском">В Твиттер</a>
     </div>
 
 
